--- a/plutonium-cms-image-display.html
+++ b/plutonium-cms-image-display.html
@@ -26,8 +26,8 @@ CMS related components.
                 min-height: 20px;
             }
         </style>
-        <h2>[[model.title]]</h2>
-        <iron-image src="[[model.data]]" sizing="cover" style="width:{{model.properties.width}}px; height:{{model.properties.height}}px;"></iron-image>
+        <h2>[[contentModel.title]]</h2>
+        <iron-image src="[[contentModel.data]]" sizing="cover" style="width:{{contentModel.properties.width}}px; height:{{contentModel.properties.height}}px;"></iron-image>
     </template>
 
     <script>
