--- a/plutonium-cms-image-editor.html
+++ b/plutonium-cms-image-editor.html
@@ -24,10 +24,10 @@ CMS related components.
         </style>
         <h2>Edit image properties</h2>
         <div class="card-content">
-            <paper-input label="Title" name="title" value="{{model.title}}"></paper-input>
-            <paper-input label="Url" name="src" value="{{model.data}}"></paper-input>
-            <paper-input label="Width" name="width" value="{{model.properties.width}}"></paper-input>
-            <paper-input label="Height" name="height" value="{{model.properties.height}}"></paper-input>
+            <paper-input label="Title" name="title" value="{{contentModel.title}}"></paper-input>
+            <paper-input label="Url" name="src" value="{{contentModel.data}}"></paper-input>
+            <paper-input label="Width" name="width" value="{{contentModel.properties.width}}"></paper-input>
+            <paper-input label="Height" name="height" value="{{contentModel.properties.height}}"></paper-input>
         </div>
     </template>
 
