--- a/demo/index_video.html
+++ b/demo/index_video.html
@@ -36,8 +36,8 @@
                                 width: 200
                             }
                         };
-                        display.model = model;
-                        editor.model = model;
+                        display.contentModel = model;
+                        editor.contentModel = model;
                     </script>
                 </template>
             </demo-snippet>
