Fix inner html.

--- a/plutonium-cms-text-display.html
+++ b/plutonium-cms-text-display.html
@@ -37,7 +37,7 @@ CMS related components.
                 'observeData(contentModel.data)'
             ],
             observeData: function(data) {
-                this.$.pData.innerHtml = data;
+                this.$.pData.innerHTML = data;
             }
         });
     </script>
