--- a/plutonium-cms-image-display.html
+++ b/plutonium-cms-image-display.html
@@ -27,7 +27,7 @@ CMS related components.
             }
         </style>
         <h2>[[contentModel.title]]</h2>
-        <iron-image src="[[contentModel.data]]" sizing="cover" style="width:{{contentModel.properties.width}}px; height:{{contentModel.properties.height}}px;"></iron-image>
+        <iron-image src="[[contentModel.data]]" sizing="cover" style="width:{{contentModel.width}}px; height:{{contentModel.height}}px;"></iron-image>
     </template>
 
     <script>
