--- a/plutonium-cms-video-display.html
+++ b/plutonium-cms-video-display.html
@@ -21,7 +21,7 @@ CMS related components.
             }
         </style>
         <h2>[[contentModel.title]]</h2>
-        <video width="{{contentModel.properties.width}}" height="{{contentModel.properties.height}}" controls="true" src="{{videoSrc}}" type="video/mp4" preload="auto"></video>
+        <video width="{{contentModel.width}}" height="{{contentModel.height}}" controls="true" src="{{videoSrc}}" type="video/mp4" preload="auto"></video>
     </template>
 
     <script>
