--- a/plutonium-cms-video-editor.html
+++ b/plutonium-cms-video-editor.html
@@ -26,8 +26,8 @@ CMS related components.
         <div class="card-content">
             <paper-input label="Title" name="title" value="{{contentModel.title}}"></paper-input>
             <paper-input label="Url" name="src" value="{{contentModel.data}}"></paper-input>
-            <paper-input label="Width" name="width" value="{{contentModel.properties.width}}"></paper-input>
-            <paper-input label="Height" name="height" value="{{contentModel.properties.height}}"></paper-input>
+            <paper-input label="Width" name="width" value="{{contentModel.width}}"></paper-input>
+            <paper-input label="Height" name="height" value="{{contentModel.height}}"></paper-input>
         </div>
     </template>
 
