--- a/plutonium-cms-form.html
+++ b/plutonium-cms-form.html
@@ -24,7 +24,7 @@ CMS related components.
         </style>
         <h1>[[title]]</h1>
         <template is="dom-repeat" items="{{contentModel.sections}}" as="section">
-            <plutonium-cms-field content-model="{{section}}"></plutonium-cms-field>
+            <plutonium-cms-field name="[[section.id]]" content-model="{{section}}"></plutonium-cms-field>
         </template>
     </template>
 
